Bug #6: Display team links as two columns on smaller displays

--- a/assets/styles/_scss/_team.scss
+++ b/assets/styles/_scss/_team.scss
@@ -46,40 +46,23 @@
   }
 
   .team-links {
-    @include display(flex);
-    @include flex-wrap(wrap);
-    @include justify-content(center);
-    @include align-items(center);
-
-    color: $dark-blue;
     margin-bottom: 3em;
     margin-top: 1em;
     text-align: center;
-    width: 100%;
 
     li {
+      display: inline-block;
       list-style-type: none;
       padding: 0 .75em;
+      min-width: 45%;
+
+      @include media($large-screen) {
+        min-width: 1%;
+      }
     }
 
-    .team-links {
-      margin-bottom: 3em;
-      margin-top: 1em;
-      text-align: center;
-
-      li {
-        list-style-type: none;
-        padding: 0 .75em;
-        width: 100%;
-        @include media($medium-screen) {
-          display: inline;
-          min-width: 1%;
-        }
-      }
-
-      .fa-file-text {
-          font-size: 13px;
-      }
+    .fa-file-text {
+        font-size: 13px;
     }
   }
 }
